--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
     display: table;
     width: 100%;
     height: 100%;
+    z-index: 9;
 }
 
 h1 {
@@ -92,3 +93,26 @@ p {
     text-align: center;
     vertical-align: middle;
 }
+.menu
+{
+list-style: georgian;
+    font-family: fantasy;
+    position: absolute;
+    top: 10px;
+    right: 30px;
+   z-index: 10; 
+ cursor:  pointer;
+    
+    
+}
+.links{
+    float: left;
+    color: black;
+    padding-top: 5px;
+    padding-left: 9px;
+    padding-right:9px;
+    padding-bottom: 5px;
+    font-family: sans-serif;
+    font-size: 20px;
+}
+.links:hover { background-color:dodgerblue; }
